// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Processing Service processJob - simple mock - completed 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Basic Mocked Run",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": "https://sap.com",
    "mimeType": null,
    "name": "Link",
    "type_code": "link",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Result",
    "type_code": "message",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed 2`] = `
[
  {
    "severity_code": "info",
    "text": "Job is running in basic mock mode",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed 3`] = `[]`;

exports[`Processing Service processJob - simple mock - completed 4`] = `
[
  {
    "severity_code": "info",
    "text": "Job completed successfully",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with error 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Basic Mocked Run",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Result",
    "type_code": "message",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with error 2`] = `
[
  {
    "severity_code": "info",
    "text": "Job is running in basic mock mode",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with error 3`] = `
[
  {
    "severity_code": "error",
    "text": "Job completed. An error occurred during job processing",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with warning 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Basic Mocked Run",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Result",
    "type_code": "message",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with warning 2`] = `
[
  {
    "severity_code": "info",
    "text": "Job is running in basic mock mode",
  },
]
`;

exports[`Processing Service processJob - simple mock - completed with warning 3`] = `
[
  {
    "severity_code": "warning",
    "text": "Job completed. A warning occurred during job processing",
  },
]
`;

exports[`Processing Service processJob - simple mock - failed 1`] = `
[
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Basic Mocked Run",
    "type_code": "message",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Failure",
    "type_code": "message",
  },
]
`;

exports[`Processing Service processJob - simple mock - failed 2`] = `
[
  {
    "severity_code": "info",
    "text": "Job is running in basic mock mode",
  },
]
`;

exports[`Processing Service processJob - simple mock - failed 3`] = `
[
  {
    "severity_code": "error",
    "text": "Job failed. An error occurred during job processing",
  },
]
`;

exports[`Processing Service updateJob - results - base64 1`] = `
[
  {
    "filename": "test.txt",
    "link": null,
    "mimeType": "text/plain",
    "name": "Data",
    "type_code": "data",
  },
  {
    "filename": null,
    "link": "https://sap.com",
    "mimeType": null,
    "name": "Link",
    "type_code": "link",
  },
  {
    "filename": null,
    "link": null,
    "mimeType": null,
    "name": "Result",
    "type_code": "message",
  },
]
`;

exports[`Processing Service updateJob - results - base64 2`] = `
[
  {
    "severity_code": "info",
    "text": "Job completed successfully",
  },
]
`;

exports[`Processing Service updateJob - results - readable 1`] = `
[
  {
    "filename": "test.txt",
    "link": null,
    "mimeType": "text/plain",
    "name": "Data",
    "type_code": "data",
  },
]
`;

exports[`Processing Service updateJob - results - readable 2`] = `[]`;
